--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ project.xcworkspace
 # http://guides.cocoapods.org/using/using-cocoapods.html#should-i-check-the-pods-directory-into-source-control
 #
 Pods/
+Podfile.lock
 
 # Carthage
 #
