--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 xcuserdata
 project.xcworkspace
 
+## vendors
+vendors
+
 ## Build generated
 /build
 
@@ -19,5 +22,5 @@ Podfile.lock
 # Add this line if you want to avoid checking in source code from Carthage dependencies.
 # Carthage/Checkouts
 
-Carthage/Build
+Carthage
 .build
